<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".ui.profile.ProfileActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/round_person_24"
            android:contentDescription="@string/profile_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textSize="12sp"
        android:text="@string/txt_email"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        android:text="@string/tv_email"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvStrike1"
        android:background="@drawable/strike"
        android:layout_width="225dp"
        android:contentDescription="@string/strike_1"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        />

    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textSize="12sp"
        android:text="@string/txt_fullname"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvStrike1"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        android:text="@string/tv_full_name"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvStrike2"
        android:background="@drawable/strike"
        android:layout_width="225dp"
        android:contentDescription="@string/strike_2"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName"
        />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textSize="12sp"
        android:text="@string/txt_gender"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvStrike2"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        android:text="@string/tv_gender"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvStrike3"
        android:background="@drawable/strike"
        android:layout_width="225dp"
        android:contentDescription="@string/strike_3"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender"
        />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textSize="12sp"
        android:text="@string/txt_phone"
        android:textColor="@color/grey"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvStrike3"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:textSize="18sp"
        android:text="@string/tv_phone"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvStrike4"
        android:background="@drawable/strike"
        android:layout_width="225dp"
        android:contentDescription="@string/strike_4"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        />



    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tvStrike4"
        style="@style/BUTTON"
        android:text="@string/button_form"
        android:textStyle="bold"
       app:layout_constraintStart_toEndOf="@+id/cvProfile"/>

</androidx.constraintlayout.widget.ConstraintLayout>