<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".ui.form.EditProfileActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/round_person_24"
            android:contentDescription="@string/profile_image" />



    </androidx.cardview.widget.CardView>



    <ImageButton
        android:id="@+id/pickImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/pick_image"
        android:layout_marginStart="115dp"
        android:elevation="2dp"
        android:background="@drawable/round_corner"
        android:src="@drawable/ic_add_a_photo_24"
        app:layout_constraintStart_toStartOf="@+id/cvProfile"
        app:layout_constraintBottom_toBottomOf="@+id/cvProfile"
        />




    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        style="@style/TEXT"
        android:hint="@string/et_fullname"
        android:background="@drawable/bg_input"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        style="@style/TEXT"
        android:hint="@string/et_gender"
        android:background="@drawable/bg_input"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        style="@style/TEXT"
        android:hint="@string/et_phone"
        android:background="@drawable/bg_input"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGender" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        style="@style/BUTTON"
        android:text="@string/button_save"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>