<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".ui.login.LoginActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_ec"
            android:contentDescription="@string/profile_image" />


    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etEmail"
        style="@style/TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_input"
        android:drawableStart="@drawable/ic_email_24"
        android:hint="@string/et_email"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLogo"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        style="@style/TEXT"
        android:drawableStart="@drawable/ic_lock_24"
        android:background="@drawable/bg_input"
        android:hint="@string/et_password"
        android:autofillHints="password"
        android:inputType="textVisiblePassword"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="90dp"
        android:minHeight="55dp"
        android:background="@drawable/bg_input"
        style="@style/BUTTON"
        android:text="@string/button_login"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>